Add BVH-accelerated ray casting.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,7 +120,7 @@ explicit = true
 warp-lang = { index = "nvidia", marker = "sys_platform != 'darwin'" }
 mujoco = { index = "mujoco" }
 torch = { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform != 'darwin'" }
-mujoco-warp = { git = "https://github.com/google-deepmind/mujoco_warp", rev = "4ce1c3e9fd635f6589f8b91b2cfba1739cba01a3" }
+mujoco-warp = { path = "../mujoco_warp", editable = true }
 
 [tool.ruff]
 src = ["src"]  # Helpful for recognizing first-party imports.
@@ -140,7 +140,7 @@ ignore = ["./typings", "./src/mjlab/utils/lab_api", "./docs"]
 stubPath = "typings"
 
 [tool.ty.environment]
-extra-paths = ["typings"]
+extra-paths = ["typings", "../mujoco_warp"]
 
 [tool.ty.src]
 include = ["src", "tests"]
